# emotion_classification

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: LR_4.ipynb  emotion_classification.ipynb  tree.dot
notebooks/.ipynb_checkpoints/: emotion_classification-checkpoint.ipynb
src/: find_best_gabor.py  predict.py  preprocessing.py  prepros.py  training.py
