[tool.poetry]
name = "emotion-classification"
version = "0.1.0"
description = ""
authors = ["Anton <olsh.ant@yandex.ru>"]
readme = "README.md"
packages = [{include = "emotion_classification"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
